<resources>
    <string name="app_name">Assistant Speech</string>
    <string name="contact_list">Contact list</string>
    <string name="dial_pad">Dial Pad</string>
    <string name="play_music">Play music</string>
    <string name="title_activity_music_player">MusicPlayer</string>
    <string name="settings">settings</string>
    <string name="data_and_time">data and time</string>
    <string name="hello">Hello World, Dialerpad!</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Zero">0</string>
    <string name="Hash">#</string>
    <string name="Star">*</string>
    <string name="Call">Call</string>
    <string name="Back">Back Space</string>
    <string name="prompt">Dial Number</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="sendEmail">send Email</string>
    <string name="title_activity_make_acall">Assistant</string>
    <string name="makeCall">Call Some One</string>
</resources>
