<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="specialneeds.speech.MainActivity">

    <Button
        android:text="@string/contact_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/holo_green_light" />


    <Button
        android:text="@string/dial_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialPadButt"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:layout_below="@+id/playMusicButt"
        android:layout_marginTop="26dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/black"
        android:textColor="@android:color/background_light"
        style="@style/Widget.AppCompat.ActionMode"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <Button
        android:text="@string/play_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playMusicButt"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:text="@string/data_and_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Date"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/dialPadButt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:id="@+id/sendEmailBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendEmail"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:layout_below="@+id/makeCall"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:id="@+id/makeCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Date"
        android:layout_marginTop="33dp"
        android:text="@string/makeCall"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp" />

</RelativeLayout>
